fix(GUI): visually-hidden previous/next arrows in reader window when in scroll mode were keyboard-tabbable but remained invisible (now handles the mouse use override too), also follow-up to ee0e3869157540886e183913704733fbd195c332 which caused short Y dimension to trigger vertical scrollbar (see #3108 )

--- a/src/renderer/assets/styles/components/readerFooter.scss
+++ b/src/renderer/assets/styles/components/readerFooter.scss
@@ -29,11 +29,13 @@
     width: 50px;
     z-index: 1;
 
-    &:hover {
-        button {
-            opacity: 1 !important;
-        }
+    &:not(.isPaginated) button {
+      opacity: 0;
     }
+}
+
+:root.R2_CSS_CLASS__KEYBOARD_INTERACT .arrows button:focus {
+    opacity: 1 !important;
 }
 
 .arrows button {
@@ -43,6 +45,10 @@
     top: calc(50dvh - 220px);
     z-index: 10;
     transition: 200ms;
+
+    &:hover {
+        opacity: 1 !important;
+    }
 
     svg {
         fill: var(--color-blue);
@@ -71,7 +77,7 @@
     cursor: pointer;
     margin: 0;
 }
-  
+
 
 .reader_footer {
     position: fixed;
@@ -150,7 +156,7 @@
     & .track_reading_wrapper {
         padding: 1rem 5rem 1rem 8rem;
         bottom: 0;
-        
+
         // margin-top: 1rem;
         color: var(--color-primary);
         background-color: var(--color-secondary);
